smart_factory_ws/log/build_2025-05-08_20-36-01/smart_factory/stderr.log
  File "/home/prethivi/ros2_ws/Smart_Factory/smart_factory_ws/install/smart_factory/lib/python3.10/site-packages/smart_factory/goals_assigner.py", line 13
    self.robot_position_topic = 
                                ^
SyntaxError: invalid syntax

